salesforce/force-app/main/default/objects/Contact/fields/Collector_Interests__c.field-meta.xml
<CustomField>
    <fullName>Collector_Interests__c</fullName>
    <label>Collector Interests</label>
    <length>255</length>
    <type>Text</type>
    <description>Collecting interests (e.g. limited editions, vintage cognac, seasonal collections)</description>
</CustomField>