salesforce/force-app/main/default/objects/Contact/fields/Entertaining_Style__c.field-meta.xml
<CustomField>
    <fullName>Entertaining_Style__c</fullName>
    <label>Entertaining Style</label>
    <length>255</length>
    <type>Text</type>
    <description>How the customer entertains (e.g. dinner parties, intimate gatherings, corporate events)</description>
</CustomField>