salesforce/force-app/main/default/objects/Contact/fields/Gifting_Profile__c.field-meta.xml
<CustomField>
    <fullName>Gifting_Profile__c</fullName>
    <label>Gifting Profile</label>
    <length>255</length>
    <type>Text</type>
    <description>Who the customer typically buys gifts for (semicolon-separated)</description>
</CustomField>