salesforce/force-app/main/default/objects/Contact/fields/Preferred_Maison__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Maison__c</fullName>
    <label>Preferred Maison</label>
    <type>Picklist</type>
    <description>Customer's preferred maison</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>La Maison</fullName>
            </value>
            <value>
                <fullName>Maison des Esprits</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>