salesforce/force-app/main/default/objects/Contact/fields/Style_Preference__c.field-meta.xml
<CustomField>
    <fullName>Style_Preference__c</fullName>
    <label>Style Preference</label>
    <length>255</length>
    <type>Text</type>
    <description>Customer's style preference (e.g. classic, modern, statement, minimalist)</description>
</CustomField>