salesforce/force-app/main/default/objects/Contact/fields/Tasting_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Tasting_Preferences__c</fullName>
    <label>Tasting Preferences</label>
    <length>255</length>
    <type>Text</type>
    <description>Spirits tasting preferences (e.g. bold cognac, vintage champagne, peated whisky)</description>
</CustomField>