salesforce/force-app/main/default/objects/Contact/fields/Travel_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Travel_Frequency__c</fullName>
    <label>Travel Frequency</label>
    <length>50</length>
    <type>Text</type>
    <description>Travel frequency (e.g. monthly, quarterly, occasional)</description>
</CustomField>